it seem to be fixed on iphone 4 but not on iphone 5

--- a/style.css
+++ b/style.css
@@ -526,17 +526,17 @@ label {
 	.fullheight {
 		height: 480px;
 	}
-}
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) and (orientation : portrait) and (-webkit-min-device-pixel-ratio : 2) {
 	.maxheight {
 		height: 1440px;
 	}
-}
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) and (orientation : portrait) and (-webkit-min-device-pixel-ratio : 2) {
 	.topheight {
 		top: 480px;
 	}
+	.noheight {
+		height: 600px;
+	}
 }
+
 
 
 
